# my-blog-backend

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  compose.yaml  docker-compose.yml
.claude/: settings.json
.github/workflows/: build-image.yaml
Docker/rust/: Dockerfile
blog-adapter/: Cargo.toml
blog-adapter/.sqlx/: query-39c58464dafddcceae5b29b454eabe29672a7ff94329eef969031707e497a919.json  query-d119d3a7d57739e8b7ad6fd32dbf5551aca117e4a6418fd0298fdad492b70a81.json  query-d697cbe7598924a36f662f854da08c2f0c4d86f40253a290f6557292e6a7ba6d.json  query-ece65d6e3c552291effc617244f5fe90b3b0919184ea2c3dccf01ac0c55eab47.json
blog-adapter/src/: config.rs  lib.rs
blog-adapter/src/db/: mod.rs
blog-adapter/src/db/article_tags/: article_tags_repository.rs  mod.rs
blog-adapter/src/db/articles/: article_repository.rs
blog-adapter/src/db/categories/: category_repository.rs
blog-adapter/src/db/comments/: comment_repository.rs  mod.rs
blog-adapter/src/db/images/: image_repository.rs
blog-adapter/src/db/query_service/: mod.rs
blog-adapter/src/db/query_service/article_image/: article_image_query_service.rs  mod.rs
blog-adapter/src/db/query_service/articles_by_category/: articles_category_query_service.rs  mod.rs
blog-adapter/src/db/query_service/articles_by_tag/: articles_tag_query_service.rs  mod.rs
blog-adapter/src/db/query_service/tags_attached_article/: mod.rs  tags_attached_article_query_service.rs
blog-adapter/src/db/tags/: tag_repository.rs
blog-adapter/src/db/users/: user_repository.rs
blog-adapter/src/idp/auth/: auth_repository.rs
blog-adapter/src/idp/tokens/: token_repository.rs
blog-adapter/src/model/: user.rs
blog-adapter/src/query_service/: mod.rs
blog-adapter/src/query_service/article_image/: article_image_query_service.rs
blog-adapter/src/query_service/articles_by_tag/: articles_tag_query_service.rs
blog-adapter/src/repository/: article.rs  auth.rs  comment.rs  mod.rs  token.rs  user.rs
blog-adapter/src/utils/: repository_error.rs
blog-app/: Cargo.toml
blog-app/src/: config.rs  lib.rs
blog-app/src/model/: auth.rs  token.rs  user.rs
blog-app/src/model/auth/: i_auth_repository.rs  mod.rs
blog-app/src/query_service/: error.rs  mod.rs
blog-app/src/query_service/article_image/: i_article_image_query_service.rs  mod.rs
blog-app/src/query_service/articles_by_category/: articles_by_category_dto.rs  i_articles_by_category_query_service.rs  mod.rs
blog-app/src/query_service/articles_by_tag/: i_articles_by_tag_query_service.rs  mod.rs
blog-app/src/query_service/tags_attached_article/: i_tags_attached_article_query_service.rs  mod.rs
blog-app/src/repository/: auth.rs  token.rs  user.rs
blog-app/src/service/: error.rs  mod.rs  token.rs
blog-app/src/service/article_tags/: article_tags_app_service.rs  mod.rs
blog-app/src/service/articles/: article_app_service.rs  article_service.rs  error.rs  mod.rs
blog-app/src/service/auth/: auth_app_service.rs  mod.rs
blog-app/src/service/categories/: category_app_service.rs  error.rs  mod.rs
blog-app/src/service/comments/: comment_app_service.rs  error.rs  mod.rs
blog-app/src/service/images/: error.rs  image_app_service.rs  mod.rs
blog-app/src/service/tags/: error.rs  mod.rs  tag_app_service.rs  tag_service.rs
blog-app/src/service/tokens/: error.rs  mod.rs  token_app_service.rs  token_service.rs
blog-app/src/service/users/: error.rs  mod.rs  user_app_service.rs
blog-app/src/usecase/: article.rs  auth.rs  comment.rs  mod.rs  token.rs  user.rs
blog-app/src/utils/: mod.rs  usecase_error.rs
blog-domain/: Cargo.toml
blog-domain/src/: config.rs  error.rs
blog-domain/src/model/: article.rs  comment.rs  error.rs  mod.rs
blog-domain/src/model/article_tags/: article_tags.rs  i_article_tags_repository.rs  mod.rs
blog-domain/src/model/articles/: article.rs  article_filter.rs  i_article_repository.rs  mod.rs
blog-domain/src/model/categories/: category.rs  i_category_repository.rs  mod.rs
blog-domain/src/model/comments/: comment.rs  i_comment_repository.rs  mod.rs
blog-domain/src/model/common/: item_count.rs  mod.rs  pagination.rs
blog-domain/src/model/images/: i_image_repository.rs  image.rs  image_filter.rs  mod.rs
blog-domain/src/model/tags/: i_tag_repository.rs  mod.rs  tag.rs  tag_filter.rs
blog-domain/src/model/tokens/: i_token_repository.rs  mod.rs  token.rs  token_string.rs
blog-domain/src/model/users/: email_cipher.rs  email_hash.rs  i_user_repository.rs  mod.rs  user.rs
blog-domain/src/repository/: article.rs  comment.rs
blog-domain/src/service/: error.rs  mod.rs
blog-domain/src/service/articles/: article_service.rs  error.rs  mod.rs
blog-domain/src/service/categories/: category_service.rs  error.rs  mod.rs
blog-domain/src/service/comments/: comment_service.rs  error.rs  mod.rs
blog-domain/src/service/images/: error.rs  image_service.rs  mod.rs
blog-domain/src/service/tags/: error.rs  mod.rs  tag_service.rs
blog-domain/src/service/users/: error.rs  mod.rs  user_service.rs
blog-driver/: Cargo.toml
blog-driver/src/: error.rs  main.rs
blog-driver/src/config/: cookie_config.rs  mod.rs
blog-driver/src/error/: app_error.rs  mod.rs  response.rs
blog-driver/src/handler/: article.rs  article_tags.rs  auth.rs  category.rs  comment.rs  image.rs  mod.rs  tag.rs  token.rs  user.rs
blog-driver/src/middleware/: logging.rs  mod.rs
blog-driver/src/model/: api_response.rs  auth_token.rs  error_message.rs  mod.rs  paged_body.rs  paged_filter_query_param.rs  pagination.rs  validated_image.rs  validated_json.rs  validated_query_param.rs
blog-driver/src/server/: app_router.rs  mod.rs
blog-driver/src/service/: cookie_service.rs  mod.rs
blog-driver/src/setup/: app_state.rs  mod.rs
blog-driver/src/utils/: app_error.rs  cookie_builder.rs  error_handler.rs  error_log_kind.rs  mod.rs
local/nginx/: Dockerfile  default.conf  nginx.conf
local/webapi/: Dockerfile
migrations/: 20240414133158_articles.down.sql  20240414133158_articles.up.sql  20240428071919_comments.up.sql  20240728145015_users.up.sql
