[workspace]
members = ["blog-*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
blog-adapter = { path = "blog-adapter" }
blog-app = { path = "blog-app" }
blog-domain = { path = "blog-domain" }
anyhow = "1.0.82"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "any",
] }
dotenv = "0.15.0"
validator = { version = "0.18.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
