[workspace]
members = ["blog-*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
blog-adapter = { path = "blog-adapter" }
blog-app = { path = "blog-app" }
blog-domain = { path = "blog-domain" }
anyhow = "1.0.82"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "any",
    "uuid",
] }
dotenv = "0.15.0"
validator = { version = "0.18.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
async-trait = "0.1.79"
serde_with = "3.12.0"
thiserror = "1.0.58"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
