[package]
name = "blog-adapter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait = "0.1.79"
blog-domain.workspace = true
blog-app.workspace = true
sqlx.workspace = true
serde.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
dotenv.workspace = true
reqwest.workspace = true
validator.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
database-test = []
