[package]
name = "blog-app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-domain.workspace = true
anyhow.workspace = true
serde.workspace = true
validator.workspace = true
async-trait.workspace = true
jsonwebtoken = "9.3.0"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = "0.4.38"
