[package]
name = "blog-domain"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
sqlx.workspace = true
validator.workspace = true
async-trait.workspace = true
