[package]
name = "blog-domain"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
sqlx.workspace = true
validator.workspace = true
async-trait.workspace = true
serde_with.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
rand = "0.8.5"
infer = "0.19.0"
image = "0.25.6"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
url = "2.5.4"
hmac = "0.12.1"
