[package]
name = "blog-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-adapter = { path = "../blog-adapter" }
blog-app = { path = "../blog-app" }
blog-domain = { path = "../blog-domain" }
axum = "0.7.4"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
