[package]
name = "blog-driver"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-adapter.workspace = true
blog-app.workspace = true
blog-domain.workspace = true
axum = "0.7.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx.workspace = true
dotenv.workspace = true
