[package]
name = "blog-driver"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-adapter.workspace = true
blog-app.workspace = true
blog-domain.workspace = true
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx.workspace = true
dotenv.workspace = true
validator.workspace = true
serde.workspace = true
reqwest.workspace = true
tower-http = { version = "0.5.2", features = ["cors"] }
axum-extra = { version = "0.9.3", features = [
    "typed-header",
    "cookie-private",
    "query",
] }
anyhow.workspace = true
http = "1.1.0"
serde_json = "1.0.134"
cookie = "0.18.1"
urlencoding = "2.1.3"
infer = "0.19.0"
serde_qs = "0.15.0"
thiserror.workspace = true
